Solved Navbar overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -92,18 +92,18 @@ nav ul li a:hover::after {
 
 @media screen and (max-width: 950px) {
     nav {
+        display: none;
         position: absolute;
         top: 0;
         right: 0;
         height: 100vh;
         width: 65%;
         background-color: #061d32;
-        transform: translateX(100%);
         transition: all .2s;
     }
 
     nav.active {
-        transform: translateX(0);
+       display: block;
     }
 
     nav ul {
